Added height detection with two types switchers

--- a/features.html
+++ b/features.html
@@ -184,7 +184,6 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-incl">Problem</label>
                             <input type="checkbox" id="toggle-incl" class="toggle" checked>
@@ -297,7 +296,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <section id="placeholders">
@@ -326,14 +324,13 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-ref">Problem</label>
-                            <input type="checkbox" id="toggle-ref" class="toggle" checked>
+                            <input type="checkbox" id="toggle-ref" class="toggle-mix-row" checked>
                             <label for="toggle-ref">Solution</label>
 
                             <div class="row equal-cols">
-                                <div class="col-md-6">
+                                <div class="col-md-6 common">
                                     <h3 class="code-title"><code>payment-backend</code></h3>
                                     <pre class="code-block">
                                         <code class="language-yaml">
@@ -379,7 +376,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <section id="expressions">
@@ -401,7 +397,6 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-expr">Problem</label>
                             <input type="checkbox" id="toggle-expr" class="toggle" checked>
@@ -443,7 +438,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <section id="env">
@@ -471,7 +465,6 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-env">Problem</label>
                             <input type="checkbox" id="toggle-env" class="toggle" checked>
@@ -556,7 +549,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <section id="templates">
@@ -585,7 +577,6 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-tmpl">Problem</label>
                             <input type="checkbox" id="toggle-tmpl" class="toggle" checked>
@@ -673,7 +664,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <section id="diff">
@@ -700,7 +690,6 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col"> -->
                         <div class="row-with-switch">
                             <label for="toggle-diff">Problem</label>
                             <input type="checkbox" id="toggle-diff" class="toggle" checked>
@@ -772,7 +761,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- </div> -->
                     </section>
 
                     <p class="text-dark">Can't wait to try it out? Head over to <a href="quickstart.html">Quickstart</a>
