--- a/features.html
+++ b/features.html
@@ -559,7 +559,7 @@
                                 <div class="col-md-12 col-lg-6">
                                     <h4>Problem</h4>
                                     <p>Your services usually require some additional 3rd party configuration files like
-                                        a log configuration or a deploy script. It's easy if these files doesn't have
+                                        a log configuration or a deploy script. It's easy if these files don't have
                                         difference for every service but what if you need to change them a bit for each
                                         service or environment?
                                     </p>
@@ -676,9 +676,8 @@
                                     <p>When you have your configuration in some kind of templating engine it might be
                                         difficult to keep track of changes or compare different versions of
                                         configuration.
-                                        For example, before new deployment to production you want to know what changed
-                                        in
-                                        your configuration.
+                                        For example, before new deployment to production you want to know what has been changed
+                                        in your configuration.
                                     </p>
                                 </div>
 
