Added examples blocks height detection to index page

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <div class="row equal-cols">
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 name: payment-backend
 
@@ -276,7 +276,7 @@
 
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 name: payment-frontend
 
@@ -299,7 +299,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 name: payment-backend
 
@@ -324,7 +324,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 name: payment-frontend
 
@@ -359,7 +359,7 @@
 
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 image: "payment-backend:1.5"
 
@@ -377,7 +377,7 @@
 
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="language-yaml">
                                 image: "payment-frontend:2.1"
 
@@ -395,7 +395,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 image: "payment-backend:latest"
 
@@ -413,7 +413,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                             <code class="lang-yaml">
                                 image: "payment-frontend:latest"
 
@@ -441,7 +441,7 @@
 
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
                                       &lt;appender class=&quot;LogstashTcpSocketAppender&quot;&gt;
@@ -457,7 +457,7 @@
 
                         <div class="col-md-6 on">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
                                       &lt;appender class=&quot;LogstashTcpSocketAppender&quot;&gt;
@@ -473,7 +473,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-frontend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
                                       &lt;appender class="FileAppender"&gt;
@@ -489,7 +489,7 @@
 
                         <div class="col-md-6 off">
                             <h3 class="code-title"><code>payment-backend</code></h3>
-                            <pre>
+                            <pre class="code-block">
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
                                       &lt;appender class="FileAppender"&gt;
@@ -541,6 +541,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="vendor/prism/prism.js"></script>
+    <script async src="script/setCodeBlockHeight.js"></script>
 </body>
 
 </html>
