adding server page

--- a/server.html
+++ b/server.html
@@ -188,10 +188,9 @@
                 <p>After you installed <code>microctl</code> and started your server you can fetch configuration.</p>
                 <p>All examples assume that you have your server running on http://localhost:8080 with <code>microconfig-quickstart</code>
                     repo.</p>
-                <p>To user your own server url you can either use <code>$MCS_ADDRESS</code> environment variable or
-                    specify it
-                    with <code>--server</code> flag. If you don't specify anything <code>http://localhost:8080</code> is
-                    used.</p>
+                <p>To use your own server url you can either use <code>MCS_ADDRESS</code> environment variable or
+                    specify it with <code>--server</code> flag. If you don't specify anything <code>http://localhost:8080</code>
+                    is used.</p>
                 <br/>
 
                 <h3 class="mc-green" id="cli-help">microctl help</h3>
@@ -322,7 +321,9 @@
                 <p>Microconfig Server is in active development and currently in Beta. If you have any issues or
                     suggestions
                     you can contact us on <a href="https://github.com/microconfig/microconfig-server/issues">Github</a>
-                    or Join our <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a></p>
+                    or Join our <a
+                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+                </p>
                 <br/>
             </section>
             <br/>
