opening server page

--- a/quickstart.html
+++ b/quickstart.html
@@ -82,6 +82,9 @@
                             <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" href="server.html">Server</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" href="documentation.html">Docs</a>
                         </li>
                     </ul>
