--- a/quickstart.html
+++ b/quickstart.html
@@ -276,7 +276,7 @@
     </main>
     <footer class="text-muted bg-light">
         <div class="container footer-container">
-            <p class="copyright">Microconfig.io &copy; 2017-2020</p>
+            <p class="copyright">Microconfig.io &copy;</p>
 
             <div class="contacts">
                 <ul class="list-unstyled mb-0">
