--- a/server.html
+++ b/server.html
@@ -312,7 +312,7 @@
                                   value: http://microconfig-server.default.svc.cluster.local
                                 - name: MC_CMD
                                   value: save
-                                - name: MC_COMPONENT
+                                - name: MC_SERVICE
                                   value: payment-backend
                                 - name: MC_ENV
                                   value: dev
