--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     </main>
     <footer class="text-muted bg-light">
         <div class="container footer-container">
-            <p class="copyright">Microconfig.io &copy; 2017-2023</p>
+            <p class="copyright">Microconfig.io &copy;</p>
 
             <div class="contacts">
                 <ul class="list-unstyled mb-0">
